--- a/views/Resorts.html
+++ b/views/Resorts.html
@@ -64,17 +64,21 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container nav-flex">
       <div class="logo d-flex align-items-center">
-        <img src="../images/logo.png" alt="Ski Track Logo" class="img-fluid" style="width: 80px; height: 80px;">
-        <span>Ski Track</span>
+        <a href="index.html">
+          <img src="../views/../images/logo.png" alt="Ski Track Logo" class="img-fluid" style="width: 80px; height: 80px;" />
+        </a>        
+        <a href="index.html" style="text-decoration: none; color: inherit;">
+          <span>Ski Track</span>
+        </a>        
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav-links navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="Resorts.html">Resorts</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Weather</a></li>
+          <li class="nav-item"><a class="nav-link " href="weather.html" id="weather-link">Weather</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
@@ -227,9 +231,45 @@
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-4 bg-light">
-    <p>&copy; 2025 Ski Track. All rights reserved.</p>
+  <footer class="footer bg-dark text-light py-4">
+    <div class="container footer-flex d-flex flex-column flex-md-row justify-content-between align-items-center">
+      
+      <span class="footer-left mb-2 mb-md-0">
+        © 2024 Ski Track. All rights reserved.
+      </span>
+      
+      <section class="newsletter-section mb-2 mb-md-0">
+        <div class="newsletter-container">
+          <h3 class="h6">Subscribe to our Ski Track Newsletter</h3>
+          <form id="newsletterForm" class="d-flex" onsubmit="subscribeNewsletter(event)">
+            <input type="email" id="newsletterEmail" class="form-control me-2" placeholder="Your email address..." required>
+            <button type="submit" class="btn btn-primary"><i class="fas fa-envelope"></i> Subscribe</button>
+          </form>
+          <div class="newsletter-message" id="newsletterMessage"></div>
+        </div>
+      </section>
+      
+      <span class="footer-right">
+        <a href="https://www.facebook.com/" target="_blank" class="text-light me-2">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" class="text-light me-2">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://x.com/" target="_blank" class="text-light me-2">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://al.linkedin.com/" target="_blank" class="text-light">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </span>
+    </div>
   </footer>
+
+  
+  <button onclick="scrollToTop()" class="back-to-top btn btn-primary rounded-circle position-fixed bottom-0 end-0 m-4 shadow" id="backToTopBtn" title="Go to top">
+    <i class="fa fa-chevron-up"></i>
+  </button>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
