--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,12 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container nav-flex">
       <div class="logo d-flex align-items-center">
-        <img src="../views/../images/logo.png" alt="Ski Track Logo" class="img-fluid" style="width: 80px; height: 80px;"/>
-        <span>Ski Track</span>
+        <a href="index.html">
+          <img src="../views/../images/logo.png" alt="Ski Track Logo" class="img-fluid" style="width: 80px; height: 80px;" />
+        </a>        
+        <a href="index.html" style="text-decoration: none; color: inherit;">
+          <span>Ski Track</span>
+        </a>        
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -26,7 +30,7 @@
         <ul class="nav-links navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="Resorts.html">Resorts</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Weather</a></li>
+          <li class="nav-item"><a class="nav-link " href="weather.html" id="weather-link">Weather</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
@@ -121,20 +125,29 @@
       <div class="row activity-cards g-3">
         <div class="col-6 col-md-2 activity-card">
           <a href="Snowboarding.html" class="d-flex align-items-center justify-content-center text-decoration-none text-dark w-100 h-100">
-            <i class="fas fa-snowboarding me-2"></i> Snowboarding
+            <span><i class="fas fa-snowboarding me-2"></i> Snowboarding</span>
           </a>
         </div>
         <div class="col-6 col-md-2 activity-card">
-          <span><i class="fas fa-person-skiing"></i> Ski Lessons</span>
+          <a href="SkiLessons.html" class="d-flex align-items-center justify-content-center text-decoration-none text-dark w-100 h-100">
+            <span><i class="fas fa-person-skiing me-2"></i> Ski Lessons</span>
+          </a>
         </div>
+        
         <div class="col-6 col-md-2 activity-card">
+          <a href="FamilyFun.html" class="d-flex align-items-center justify-content-center text-decoration-none text-dark w-100 h-100">
           <span><i class="fas fa-children"></i> Family Fun</span>
+        </a>
         </div>
         <div class="col-6 col-md-2 activity-card">
+          <a href="ApresSki.html" class="d-flex align-items-center justify-content-center text-decoration-none text-dark w-100 h-100">
           <span><i class="fas fa-champagne-glasses"></i> Après Ski</span>
+        </a>
         </div>
         <div class="col-6 col-md-2 activity-card">
+          <a href="EventPage.html" class="d-flex align-items-center justify-content-center text-decoration-none text-dark w-100 h-100">
           <span><i class="fas fa-calendar-star"></i> Events</span>
+        </a>
         </div>
       </div>
     </div>
