--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,13 @@
           <li class="nav-item"><a class="nav-link " href="weather.html" id="weather-link">Weather</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search..." id="searchInput">
+            <button class="btn btn-outline-primary" type="submit" id="searchIcon">
+              <i class="fa fa-search"></i>
+            </button>
+          </form>
+          
         </ul>
       </div>
     </div>
