--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -43,8 +43,8 @@ if (!list)              // prevents “weatherList is not defined”
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="Resorts.html">Resorts</a></li>
           <li class="nav-item"><a class="nav-link " href="weather.html" id="weather-link">Weather</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search..." id="searchInput">
             <button class="btn btn-outline-primary" type="submit" id="searchIcon">
